# expdftable

./: .gitignore  Pipfile  README.md  expdftable.py  expdftableTk.py  pyproject.toml  requirements.txt  translation.py
expdftable/: expdftable.py  expdftableTk.py  translation.py
expdftable/locale/ja_JP/LC_MESSAGES/: messages.po
locale/ja_JP/LC_MESSAGES/: messages.po
